--- a/index.html
+++ b/index.html
@@ -11,44 +11,34 @@
     />
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <div class="img-container">
-          <img src="images/image-product-desktop.jpg" alt="Image of perfume" />
-        </div>
-        <div class="wrapper">
-          <p id="top">PERFUME</p>
-          <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
-          <p class="description">
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="price-container">
-            <div class="discount"><b>$149.99</b></div>
-            <div class="old-price"><s>$169.99</s></div>
-          </div>
-          <button>
-            <img src="images/icon-cart.svg" alt="" id="icon-cart" />
-            <p id="cart-txt">Add to Cart</p>
-          </button>
-        </div>
+    <div class="container">
+      <div class="img-container">
+        <img  class="product-img" src="images/image-product-desktop.jpg" alt="Image of perfume" />
       </div>
-    </main>
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#"> Sebastian</a>.
-      </p>
-    </footer>
+      <div class="wrapper">
+        <p class="top">PERFUME</p>
+        <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
+        <p class="description">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="price-container">
+          <div class="new-price"><b>$149.99</b></div>
+          <div class="old-price"><s>$169.99</s></div>
+        </div>
+        <button>
+          <img src="images/icon-cart.svg" alt="" class="icon-cart" />
+          <p id="cart-txt"><b>Add to Cart</b></p>
+        </button>
+      </div>
+    </div>
+    <p class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#"> Sebastian</a>.
+    </p>
   </body>
 </html>
