--- a/index.html
+++ b/index.html
@@ -13,32 +13,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="img-container">
-        <img  class="product-img" src="images/image-product-desktop.jpg" alt="Image of perfume" />
-      </div>
-      <div class="wrapper">
-        <p class="top">PERFUME</p>
-        <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
-        <p class="description">
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div class="price-container">
-          <div class="new-price"><b>$149.99</b></div>
-          <div class="old-price"><s>$169.99</s></div>
+    <main>
+      <div class="container">
+        <div class="img-container">
+          <img  class="product-img" src="images/image-product-desktop.jpg" alt="Image of perfume" />
         </div>
-        <button>
-          <img src="images/icon-cart.svg" alt="" class="icon-cart" />
-          <p id="cart-txt"><b>Add to Cart</b></p>
-        </button>
+        <div class="wrapper">
+          <p class="top">PERFUME</p>
+          <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
+          <p class="description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="price-container">
+            <div class="new-price"><b>$149.99</b></div>
+            <div class="old-price"><s>$169.99</s></div>
+          </div>
+          <button>
+            <img src="images/icon-cart.svg" alt="" class="icon-cart" />
+            <p id="cart-txt"><b>Add to Cart</b></p>
+          </button>
+        </div>
       </div>
-    </div>
-    <p class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#"> Sebastian</a>.
-    </p>
+    </main>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#"> Sebastian</a>.
+      </p>
+    </footer>
   </body>
 </html>
