--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="new-price"><b>$149.99</b></div>
             <div class="old-price"><s>$169.99</s></div>
           </div>
-          <button>
+          <button class="btn">
             <img src="images/icon-cart.svg" alt="" class="icon-cart" />
-            <p id="cart-txt"><b>Add to Cart</b></p>
+            Add to Cart
           </button>
         </div>
       </div>
