--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -16,7 +20,11 @@
     <main>
       <div class="container">
         <div class="img-container">
-          <img  class="product-img" src="images/image-product-desktop.jpg" alt="Image of perfume" />
+          <img
+            class="product-img"
+            src="images/image-product-desktop.jpg"
+            alt="Image of perfume"
+          />
         </div>
         <div class="wrapper">
           <p class="top">PERFUME</p>
@@ -27,7 +35,7 @@
           </p>
           <div class="price-container">
             <div class="new-price"><b>$149.99</b></div>
-            <div class="old-price"><s>$169.99</s></div>
+            <div class="old-price">$169.99</div>
           </div>
           <button class="btn">
             <img src="images/icon-cart.svg" alt="" class="icon-cart" />
