add variables and change rem on px in border radious

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img
             class="product-img"
             src="images/image-product-desktop.jpg"
-            alt="Image of perfume"
+            alt="Image of  the perfume"
           />
         </div>
         <div class="wrapper">
@@ -38,7 +38,7 @@
             <div class="old-price">$169.99</div>
           </div>
           <button class="btn">
-            <img src="images/icon-cart.svg" alt="" class="icon-cart" />
+            <img src="images/icon-cart.svg" alt="" class="icon-cart" alt="" />
             Add to Cart
           </button>
         </div>
