--- a/index.html
+++ b/index.html
@@ -18,27 +18,26 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class="img-container">
+      <div class="card">
+        <div class="card__img-container">
           <img
-            class="product-img"
             src="images/image-product-desktop.jpg"
             alt="Image of  the perfume"
           />
         </div>
-        <div class="wrapper">
-          <p class="top">PERFUME</p>
-          <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
-          <p class="description">
+        <div class="card__info">
+          <p>PERFUME</p>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p class="card__description">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
-          <div class="price-container">
-            <div class="new-price"><b>$149.99</b></div>
-            <div class="old-price">$169.99</div>
+          <div class="card__prices">
+            <b class="card__prices--new">$149.99</b>
+            <p>$169.99</p>
           </div>
-          <button class="btn">
-            <img src="images/icon-cart.svg" alt="" class="icon-cart" alt="" />
+          <button>
+            <img src="images/icon-cart.svg" class="icon-cart" alt="" />
             Add to Cart
           </button>
         </div>
